--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -8,8 +8,16 @@
 :root {
   --font-primary: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
     sans-serif;
+  --font-color-accent: #7900ff;
+  --font-color-primary: #548cff;
+
+  --fs-h1: 3rem;
+  --fs-p: 1.5rem;
+
   --background-color-primary: #f9fafa;
   --background-color-secondary: #93ffd8;
+  --background-color-accent: #f0f0f0;
+
   --border-color: #aaaaaa;
 }
 body {
