--- a/front-end/src/CSS/setter.css
+++ b/front-end/src/CSS/setter.css
@@ -19,6 +19,8 @@
   margin-top: 2em;
   display: flex;
   column-gap: 7%;
+  row-gap: 1em;
+  flex-wrap: wrap;
 }
 .setter--form input {
   padding: 10px;
@@ -35,14 +37,20 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 button {
-  background-color: inherit;
   border: none;
-  color: inherit;
+}
+button:hover {
+  cursor: pointer;
 }
 .submit_button {
   background-color: var(--font-color-primary);
   font-family: var(--font-primary);
   color: var(--background-color-primary);
-  padding: 0.5em;
+  padding: 0.8em;
   border-radius: 4px;
+}
+@media (max-width: 800px) {
+  .setter {
+    width: 90%;
+  }
 }
