--- a/front-end/src/CSS/setter.css
+++ b/front-end/src/CSS/setter.css
@@ -54,3 +54,22 @@ button:hover {
     width: 90%;
   }
 }
+.label {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  font-size: 0.8rem;
+  background-color: var(--background-color-primary);
+  padding: 0.1em;
+  z-index: 10;
+  font-family: var(--font-primary);
+  transition: all 0.3s ease-in-out;
+}
+input:focus + label {
+  display: block;
+  bottom: 80%;
+}
+.dimension_section {
+  position: relative;
+}
