added comments and a function to check for duplicate file entries

--- a/front-end/src/CSS/dragarea.css
+++ b/front-end/src/CSS/dragarea.css
@@ -14,6 +14,7 @@
   align-items: center;
   row-gap: 1em;
   background-color: var(--background-color-accent);
+  margin-bottom: 1em;
 }
 .drag_area p {
   color: var(--border-color);
